--- a/documentos/templates/documentos/tabela_seguros.html
+++ b/documentos/templates/documentos/tabela_seguros.html
@@ -13,14 +13,19 @@
 {% endblock %}
 
 {% block content %}
-  <span class="titulo">{{ titulo }}</span>
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
 
   <div class="table-responsive">
     <table id="SegurosTable" class="table-bordered table-sm">
       <thead class="table-info">
         <tr>
-          <th onclick="sort('#SegurosTable', '.item', 'td:nth-child(1)')">Data</th>
-          <th>Documento</th>
+          <th onclick="sort('#SegurosTable', '.item', 'td:nth-child(1)')">
+            <span lang="pt">Data</span><span lang="en">Date</span>
+          </th>
+          <th><span lang="pt">Documento</span><span lang="en">Document</span></th>
         </tr>
       </thead>
       <tbody>
@@ -43,4 +48,8 @@
       </tbody>
     </table>
   </div>
+
+  {% comment %} Sistema de controle de exibição de linguas. {% endcomment %}
+  {% include "linguas.html" %}
+
 {% endblock %}
