local para ver como empresas se interessam por projetos

--- a/projetos/templates/projetos/projetos.html
+++ b/projetos/templates/projetos/projetos.html
@@ -10,4 +10,5 @@
 
 <h5>Análises</h5>
 <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'projetos_vs_propostas' %}">Organizações, Projetos e Propostas</a></div>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'interesses_projetos' %}">Interesses com Projetos</a></div>
 <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'filtro_projetos' %}">Filtro para Projetos</a></div>
