--- a/projetos/templates/projetos/projetos_vs_propostas.html
+++ b/projetos/templates/projetos/projetos_vs_propostas.html
@@ -174,11 +174,11 @@
 
     function carrega_semestre() {  
         // Chart da quantidade de projetos
-        var bar_projetos = document.getElementById('bar-projetos').getContext('2d');
+        var bar_projetos = document.getElementById("bar-projetos").getContext("2d");
         window.projeto = new Chart(bar_projetos, config_projetos);
 
         // Chart da quantidade de organizacoes
-        var bar_organizacoes = document.getElementById('bar-organizacoes').getContext('2d');
+        var bar_organizacoes = document.getElementById("bar-organizacoes").getContext("2d");
         window.organizacoes = new Chart(bar_organizacoes, config_organizacoes);
     }
 
