--- a/projetos/templates/projetos/filtra_projetos.html
+++ b/projetos/templates/projetos/filtra_projetos.html
@@ -10,34 +10,22 @@
 {% endblock %}
 
 {% block content %}
-  <span class="titulo">{{ titulo }}</span>
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
+
   {% include "edicoes.html" %}
   {% include "areas.html" with tudo_ligado=True titulo_areas=True not_outras=True com_borda=True %}
   
   <div class="atualizar">
-    <div class="table-responsive">
-      <table id="ProjetosTable" class="table table-bordered table-hover table-sm">
-        <thead class="table-info">
-          <tr>
-            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Projeto</span></th>
-            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Áreas</span></th>
-            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Estudantes</span></th>
-            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Período</span></th>
-            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Orientador</span></th>
-            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Organização</span></th>
-            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Orientador</span></th>
-            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Bancas</span></th>
-            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Falconi</span></th>
-            <th scope="col" class="text-center"><span style="margin-right: 0.6ex;">Média</span></th>
-          </tr>
-        </thead>
+
+    {% include "tabelas_top_ml.html" with tabela="Projetos" cabecalhos=cabecalhos %}
         {% for projeto in projetos %}
           {% with estudantes=projeto.alocacao_set.all areas=projeto.proposta.areadeinteresse_set.all %}
 
           <tr class="item {% for area in areas %}{{area.area.id}} {% endfor %}">
-              <th scope="row" data-order="{{projeto.get_titulo}}"
-              {% comment %} rowspan="{{estudantes.count}}" {% endcomment %}
-              >
+              <th scope="row" data-order="{{projeto.get_titulo}}">
                 <a href="{% url 'projeto_completo' projeto.id %}">
                   {% if projeto.titulo_final and projeto.titulo_final != projeto.proposta.titulo %}
                     {{projeto.titulo_final}}<br>
@@ -58,19 +46,14 @@
                 {% endfor %}
               </td>
               <td>
-                {% comment %} {% with alocacao=estudantes|first %} {% endcomment %}
                 {% for alocacao in estudantes %}&bull; {{alocacao.aluno.user.get_full_name}} [{{alocacao.aluno.curso2}}]{% if alocacao.aluno.externo %}<span style="color:red">[{{alocacao.aluno.externo}}]</span>{% endif %}<br>{% empty %}
                   Nenhum aluno alocado nesse projeto
                 {% endfor %}
               </td>
-              <td class="text-center"
-              {% comment %} rowspan="{{estudantes.count}}" {% endcomment %}
-              >
+              <td class="text-center">
                   {{projeto.ano}}&middot;{{projeto.semestre}}
               </td>
-              <td
-              {% comment %} rowspan="{{estudantes.count}}" {% endcomment %}
-              >
+              <td>
                 {% if projeto.orientador %}
                   <a href="{% url 'professor_detail' projeto.orientador.id %}">
                     {{ projeto.orientador }}
@@ -79,9 +62,7 @@
                   <i>Orientador não definido</i>
                 {% endif %}
               </td>
-              <td
-              {% comment %} rowspan="{{estudantes.count}}" {% endcomment %}
-              >
+              <td>
                 {% if projeto.organizacao %}
                   <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">
                     {{ projeto.organizacao.nome }}
@@ -102,56 +83,45 @@
 
           {% endwith %}
         {% endfor %}
+        </tbody>
       </table>
     </div>
   </div>
 
   <script>
 
-    var Table = null;
+    var table = null;
 
     function carrega_pagina() {
+      const tabelaElem = $("#ProjetosTable");
+      if (tabelaElem.find("th").length > 0) {   // Verifica se os THs foram registrados primeiro
+        table = tabelaElem.DataTable();
+        if (!table) return true;
 
-      Table = $("#ProjetosTable").DataTable();
-      
-      $.fn.dataTable.ext.search.push(
-        function(settings, data, dataIndex) {
-          
-          if(Table) {
-
+        $.fn.dataTable.ext.search.push(
+          function(settings, data, dataIndex) {
             // Se o principal estiver selecionado, todos aparecem, mesmo sem nenhuma área marcada
-            if( $("#titulo_areas").is(":checked") ) {
-              return true;
-            }
-
-            filterList = $("input.filtra_area[type=checkbox]");
-            encontrou = false;      
-            filterList.each(function(i, el) {
-                if($(el)[0].checked) {
-                  if($(Table.row(dataIndex).node()).hasClass($(el)[0].id)) {
-                    encontrou = true;
-                  }
-                }
-            });
-            return encontrou;
+            if( $("#titulo_areas").is(":checked") ) return true;
+            const filterList = $("input.filtra_area[type=checkbox]:checked");
+            const rowNode = $(table.row(dataIndex).node());
+            return filterList.toArray().some(el => rowNode.hasClass(el.id));
           }
-          return true;
-        }
-      );
+        );
 
-      Table.draw();
-
+        table.draw(); 
+      }
     };
+
     window.onload = carrega_pagina
 
     $(".filtra_area").change(function(){
-      if(Table) {
-        Table.draw();
-      }
+      if(table) {table.draw();}
     });
     
   </script>
 
   {% include "edicoes_ajax.html" with tabela="Projetos" %}
+
+  {% include "linguas.html" %}
 
 {% endblock %}
