--- a/operacional/templates/operacional/operacional.html
+++ b/operacional/templates/operacional/operacional.html
@@ -9,19 +9,15 @@
 <a href="{% url 'emails' %}">Listas de e-mails</a><br>
 <br>
 
+<h5>Feedbacks</h5>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'lista_acompanhamento' %}">Acompanhamento Intermediário das Organizações</a></div>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'lista_feedback' %}">Comentários Finais das Organizações</a></div>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'lista_feedback_estudantes' %}">Acompanhamento Final dos Estudantes</a></div>
+<br>
+
 <h5>Agendamentos</h5>
 <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'bancas_lista' 'proximas' %}">Bancas</a></div>
 <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'dinamicas_index' %}">Mentorias</a></div>
-<br>
-
-<h5>Informes</h5>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'plano_aulas' %}">Plano de Aulas</a></div>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'planos_de_orientacao_todos' %}">Planos de Orientação</a></div>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'relatos_quinzenais' 'todos' %}">Relatos Quinzenais</a></div>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'avaliar_entregas' 'todos' %}">Avaliações de Entregas</a></div>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'informe_bancas' 0 %}">Bancas Intermediárias</a></div>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'informe_bancas' 1 %}">Bancas Finais</a></div>
-<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'avaliacoes_pares' 'todos' %}">Avaliações de Pares</a></div>
 <br>
 
 <h5>Listagem completa</h5>
