estudantes conseguem ver parte de seus detalhes

--- a/users/templates/users/profile_detail.html
+++ b/users/templates/users/profile_detail.html
@@ -38,7 +38,7 @@
     {% endif %}
 
     <br><br>
-    {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %} 
+    {% if user.tipo_de_usuario == 1 or user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %} 
       <a class="btn btn-primary mb-1" href="{% url 'user_detail' user.id %}">Meus Detalhes</a>
     {% endif %}
     <input class="btn btn-primary mb-1" type="submit" value="Atualizar Senha" />
