--- a/templates/documentos.html
+++ b/templates/documentos.html
@@ -62,7 +62,7 @@
       </div>
       
       {% if user and user.tipo_de_usuario == 4 %}
-        <a class="open-documento" data-url="{% url 'adiciona_documento' documento.organizacao.id documento.projeto.id 'ANY' documento.id %}"><small style="font-size: 0.7em;">&nbsp;<i class="fas fa-pencil-alt"></i></small></a>
+        <a class="open-documento" data-url="{% url 'edita_documento' documento.id %}"><small style="font-size: 0.7em;">&nbsp;<i class="fas fa-pencil-alt"></i></small></a>
       {% endif %}
 
     </div>
