removendo ocorrências de Engenharia e PFE

--- a/organizacoes/templates/organizacoes/projeto_feedback.html
+++ b/organizacoes/templates/organizacoes/projeto_feedback.html
@@ -121,8 +121,8 @@
       <textarea name="outros" class="form-control" style="max-width: 860px;" rows="5" id="outros" maxlength="1000"></textarea>
 
       <label for="nps" class="mt-5" style="max-width: 860px;">
-        <span lang="pt">Em uma escala de 0 a 10, o quanto você recomendaria o Capstone/PFE (Projeto Final de Engenharia) para colegas ou parceiros de outras empresas?</span>
-        <span lang="en">On a scale of 0 to 10, how much would you recommend the Capstone/PFE (Final Engineering Project) to colleagues or partners from other companies?</span>        
+        <span lang="pt">Em uma escala de 0 a 10, o quanto você recomendaria o Capstone/PFE para colegas ou parceiros de outras empresas?</span>
+        <span lang="en">On a scale of 0 to 10, how much would you recommend the Capstone/PFE to colleagues or partners from other companies?</span>        
       </label>
       <div style="position:relative; max-width: 860px;">
         
