--- a/documentos/templates/documentos/certificado_coorientador.html
+++ b/documentos/templates/documentos/certificado_coorientador.html
@@ -58,7 +58,7 @@
 {% block content %}
     
   <span class="titulo_certificado">
-    Projeto Final de Engenharia<br>
+    Capstone<br>
     Certificado de Coorientação
   </span>
 
@@ -78,7 +78,7 @@
     
     <b>{{usuario.get_full_name}}</b>
     
-    coorientou o Projeto Final de Engenharia / Trabalho de Conclusão de Curso da Engenharia do Insper
+    coorientou o Projeto Final - Capstone / Trabalho de Conclusão de Curso no Insper
 
     apoiando
 
@@ -138,7 +138,7 @@
   <img class="signature" src="{{configuracao.coordenacao.assinatura.url|slice:'1:'}}">
   <br>
   {{configuracao.coordenacao.nome_para_certificados}}<br>
-  <small>Coordenador do Projeto Final de Engenharia do Insper</small><br>
+  <small>Coordenador do Capstone do Insper</small><br>
   </span>
 
 
