--- a/operacional/templates/operacional/plano_aulas.html
+++ b/operacional/templates/operacional/plano_aulas.html
@@ -59,7 +59,7 @@
         <tbody>
           <tr class="item">
             <td class="text-center">Desenvolvimento de Projeto com Organização Parceira</td>
-            <td class="text-center">Relatório do Projeto Final de Engenharia</td>
+            <td class="text-center">Relatório Final do Projeto</td>
           </tr>
         </tbody>
       </table>
