--- a/projetos/templates/projetos/mostra_feedback.html
+++ b/projetos/templates/projetos/mostra_feedback.html
@@ -59,7 +59,7 @@
   <textarea name="outros" class="form-control" style="max-width: 860px;" rows="5" id="outros" maxlength="1000" readonly>{{feedback.outros}}</textarea>
 
 
-  <label for="nps" class="mt-5" style="max-width: 860px;">Em uma escala de 0 a 10, o quanto você recomendaria o PFE (Projeto Final de Engenharia) para colegas ou parceiros de outras empresas?</label>
+  <label for="nps" class="mt-5" style="max-width: 860px;">Em uma escala de 0 a 10, o quanto você recomendaria o Capstone/PFE para colegas ou parceiros de outras empresas?</label>
   <div style="position:relative; max-width: 860px;">
     <span id="cor_texto" style="position:absolute; color:red; min-width:100px;">
       <span id="myValue">N/D</span>
