exibindo outros documentos publicos

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,15 @@
 
 {% comment %} REMOVER O CSS ABAIXO {% endcomment %}
 <style>
+  #language_button {
+    display: none;
+    user-select: none;
+    border-radius: 10px;
+    border: 2px solid #AAAAAA;
+    float: right;
+    margin-top: 4px;
+    margin-left: 8px;
+  }
   #logo_insper {
     width: 59px;
     height: 23px;
