--- a/documentos/templates/documentos/relatorios_publicos.html
+++ b/documentos/templates/documentos/relatorios_publicos.html
@@ -17,7 +17,7 @@
     td {padding: 8px;}
     .short-text { display: none; white-space: nowrap; }
     .full-text { display: inline-block; white-space: nowrap; }
-    @media (max-width: 1400px) {
+    @media (max-width: 1200px) {
         .short-text { display: inline-block; }
         .full-text { display: none; }
     }
@@ -31,8 +31,8 @@
 {% block content %}
 
   <span class="titulo">
-    <span lang="pt">{{ titulo }}</span>
-    <span lang="en">Public Reports</span>
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
   </span>
 
   {% include "edicoes.html" %}
@@ -55,22 +55,9 @@
   
   <div class="atualizar">
 
-    <div class="table-responsive">
 
-      <table id="RelatoriosTable" class="table table-bordered table-hover table-sm" style="width: 100%; max-width: 100%;">
-        <thead class="table-info">
-          <tr>
-            <th scope="col" class="text-center"><span lang="pt">Projeto</span><span lang="en">Project</span></th>
-            <th scope="col" class="text-center"><span lang="pt">Estudantes</span><span lang="en">Students</span></th>
-            <th scope="col" class="text-center"><span lang="pt">Orientador</span><span lang="en">Advisor</span></th>
-            <th scope="col" class="text-center"><span lang="pt">Organização</span><span lang="en">Company</span></th>
-            <th scope="col" class="text-center"><span lang="pt">Banca Final</span><span lang="en">Evaluation Committee</span></th>
-            <th scope="col" class="text-center"><span lang="pt">Período</span><span lang="en">Semester</span></th>
-            <th scope="col" class="text-center"><span lang="pt">Documento</span><span lang="en">Document</span></th>
-            <th scope="col" class="text-center">URLs</th>
-          </tr>
-        </thead>
-        <tbody>
+    {% include "tabelas_top_ml.html" with tabela="Relatorios" cabecalhos=cabecalhos %}
+
         {% for relatorio in relatorios %}
 
           {% if relatorio.link or relatorio.documento and relatorio.projeto %}
@@ -160,52 +147,47 @@
               </td>
 
               <td style="text-align:center"> {% comment %} Documento {% endcomment %}
-                  <span id="p{{relatorio.pk}}">
-                    {% if relatorio.link %}
-                      <a class="btn btn-light btn-outline-info btn-sm" style="margin-bottom: 5px;; white-space: nowrap;"
-                        href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
-                        <span class="short-text" style="width: 4em;">DSpace</span>
-                        <span class="full-text" style="width: 12em;">Link&nbsp;Biblioteca&nbsp;(DSpace)</span>
-                        {% if user.tipo_de_usuario == 4 %}
-                          <span class="open-modal" data-url="{% url 'biblioteca_link' %}{{relatorio.pk}}">
-                            <i class="fas fa-pencil-alt"></i>
-                        </span>
-                        {% endif %}
-                      </a><br>
-                    {% endif %}
-                  </span>
-                  {% if relatorio.documento %}
-                    <a class="btn btn-light btn-outline-info btn-sm"
-                      href="{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}" target="_blank" rel="noopener noreferrer">
-                      <span class="short-text" style="width: 4em;">Servidor</span>
-                      <span class="full-text" style="width: 12em;">Link&nbsp;alternativo&nbsp;(Servidor)</span>
-                    </a>
-                    {% if user.tipo_de_usuario == 4 and not relatorio.link %}
-                      <a id="c{{relatorio.pk}}"
-                        class="btn btn-warning btn-outline-dark btn-sm open-modal"
-                        href="{% url 'biblioteca_link' relatorio.pk %}"
-                        data-url="{% url 'biblioteca_link' %}{{relatorio.pk}}"
-                        target="_blank" rel="noopener noreferrer">
-                        <span class="short-text" style="width: 4em;">+&nbsp;DSpace</span>
-                        <span class="full-text" style="width: 12em;">Adicionar&nbsp;link&nbsp;Biblioteca</span>
-                      </a>
-                    {% endif %}
+                <span id="p{{relatorio.pk}}">
+                  {% if relatorio.link %}
+                    <a class="btn btn-light btn-outline-info btn-sm" style="margin-bottom: 5px;; white-space: nowrap;"
+                      href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
+                      <span class="short-text" style="width: 6em;">Relatório<sup>B</sup></span>
+                      <span class="full-text" style="width: 13em;">Relatório&nbsp;(DSpace)</span>
+                      {% if user.tipo_de_usuario == 4 %}
+                        <span class="open-modal" data-url="{% url 'biblioteca_link' %}{{relatorio.pk}}">
+                          <i class="fas fa-pencil-alt"></i>
+                      </span>
+                      {% endif %}
+                    </a><br>
                   {% endif %}
+                </span>
+                {% if relatorio.documento %}
+                  <a class="btn btn-light btn-outline-info btn-sm mt-1"
+                    href="{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}" target="_blank" rel="noopener noreferrer">
+                    <span class="short-text" style="width: 6em;">Relatório<sup>S</sup></span>
+                    <span class="full-text" style="width: 13em;">Relatório&nbsp;(Servidor)</span>
+                  </a><br>
+                  {% if user.tipo_de_usuario == 4 and not relatorio.link %}
+                    <a id="c{{relatorio.pk}}"
+                      class="btn btn-warning btn-outline-dark btn-sm open-modal mt-1"
+                      href="{% url 'biblioteca_link' relatorio.pk %}"
+                      data-url="{% url 'biblioteca_link' %}{{relatorio.pk}}"
+                      target="_blank" rel="noopener noreferrer">
+                      <span class="short-text" style="width: 6em;">+&nbsp;DSpace</span>
+                      <span class="full-text" style="width: 13em;">Adicionar&nbsp;link&nbsp;Biblioteca</span>
+                    </a><br>
+                  {% endif %}
+                {% endif %}
+
+                {% for publico in relatorio.projeto.get_documentos_publicos %}
+                  <a class="btn btn-light btn-outline-info btn-sm mt-1"
+                    href="{{request.scheme}}://{{request.get_host}}{{publico.documento.url}}" target="_blank" rel="noopener noreferrer">
+                    <span class="short-text" style="width: 6em;">{{publico.tipo_documento.primeiro_nome}}</span>
+                    <span class="full-text" style="width: 13em;">{{publico.tipo_documento}}</span>
+                  </a><br>
+                {% endfor %}
 
               </td>
-
-              <td> {% comment %} URLs {% endcomment %}
-                {% if relatorio.link%}
-                  <a href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
-                    <span>{{relatorio.link}}</span>
-                  </a><br>
-                {% endif %}
-                {% if relatorio.documento%}
-                  <a href="{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}" target="_blank" rel="noopener noreferrer">
-                    <span>{{request.scheme}}://{{request.get_host}}{{relatorio.documento.url}}</span>
-                  </a>
-                {% endif %}
-            </td>
 
             </tr>
 
@@ -213,6 +195,7 @@
 
         {% endfor %}
         </tbody>
+        <caption style="text-align:right"><small><b>B</b>: Biblioteca | <b>S</b>: Servidor</small></caption>
       </table>
     </div>
 
@@ -220,36 +203,13 @@
 
   <script>
 
-    $("#filterLingua").on("changed.bs.select", function (e, clickedIndex, isSelected, previousValue) {
-      $.fn.dataTable.ext.search.push(
-        function(settings, data, dataIndex) {
-          Table = $("#RelatoriosTable").DataTable();
-          if(Table && typeof Table.row === "function") {
-            // Somente mostra elemento selecionado
-            var val = $("#filterLingua").selectpicker("val");
-            return(val.includes($(Table.row(dataIndex).node()).attr("data-lingua")));
-          }
-          return true;
-        }
-     );
-     $("#RelatoriosTable").DataTable().draw();
-    });
-
     function carrega_pagina() {
       if($("#RelatoriosTable th").length > 0) {   // Verifica se os THs foram registrados primeiro
         table = $("#RelatoriosTable").dataTable();
         if(table) {
           table.fnSetColumnVis( 5, !($("#filterEdicao").val()!="todas" ));  // esconde Período
-          table.fnSetColumnVis( 7, false );  // esconde longa URL
-
-          // Callback para acertar o idioma
-          table.on("draw.dt", function() {
-            esconde_lingua();
-          });
-
         }
       }
-      esconde_lingua();
     }
     function carrega_site() {
       {% include "edicao_puxar_local_ou_versao.js" %}
