--- a/projetos/templates/projetos/evolucao_por_objetivo.html
+++ b/projetos/templates/projetos/evolucao_por_objetivo.html
@@ -11,7 +11,6 @@
   {% load addstr %}
   {% load l10n %}
 
-  {% comment %} <script src="{% static 'js/sort.js' %}"></script> {% endcomment %}
   <script src="{% static 'js/Chart.min.js' %}"></script>
   <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script>
 
@@ -19,20 +18,21 @@
 
 {% block content %}
 
-    <script>
-        function ajusta() { }
-        function reajusta() { }
-    </script>
+  <script>
+      function ajusta() { }
+      function reajusta() { }
+  </script>
 
-    {% include "save_image.html" %}
+  {% include "save_image.html" %}
 
-    <div id="tudo">
+  <div id="tudo">
 
-      <span class="titulo">
-        {% if lingua == "pt" %}{{titulo}}{% else %}Evolution by Learning Goal{% endif %}
-      </span>
+    <span class="titulo">
+      <span lang="pt">{{ titulo.pt }}</span>
+      <span lang="en">{{ titulo.en }}</span>
+    </span>
 
-      {% include "edicoes.html" with sem_edicao=True com_cursos=True com_objetivos=True ind_grup=True so_finais=True %}
+    {% include "edicoes.html" with sem_edicao=True com_cursos=True com_objetivos=True ind_grup=True so_finais=True %}
 
     <div class="atualizar">
 
@@ -55,7 +55,7 @@
         <script>
           
           var config_medias = {
-            type: 'bar',
+            type: "bar",
             data: {
                 labels: [
                 {% for edicao, alocacoes in estudantes %}
@@ -135,8 +135,9 @@
 
     </div>
     </div>
-    </div>
+  </div>
 
-    {% include "edicoes_ajax.html" with sem_edicao=True com_cursos=True com_objetivos=True ind_grup=True so_finais=True %}
+  {% include "edicoes_ajax.html" with sem_edicao=True com_cursos=True com_objetivos=True ind_grup=True so_finais=True %}
+  {% include "linguas.html" %}
 
 {% endblock %}
